# ComfyUI-BiRefNet-Hugo

./: BiRefNet_config.py  BiRefNet_node_config.py  README.md  README_EN.md  __init__.py  config.py  nodes.py  pyproject.toml  requirements.txt
js/: BiRefNet_Hugo.js
workflow/: video_workflow.json  workflow.json
